<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="APP_NAME">Loosely Coupled</string>
    <string name="WELCOME_STRING">Hello Dutch Mobile Conference!</string>

    <!--Main screen buttons-->
    <string name="ACTIVITY_BUTTON_TEXT">Activity</string>
    <string name="FRAGMENT_BUTTON_TEXT">Fragment</string>
    <string name="SERVICE_BUTTON_TEXT">Service</string>
    <string name="CONTENT_PROVIDER_BUTTON_TEXT">Content Provider</string>

    <!--Love Fragment-->
    <string name="LOVE_TEXT">Love</string>
    <string name="HEART_CONTENT_DESC">Heart</string>

    <!--Circle Fragment-->
    <string name="CIRCLE_CONTENT_DESC">Circle</string>

    <!--Puzzle Fragment-->
    <string name="PUZZLE_CONTENT_DESC">Puzzle Piece</string>

    <!--Star Fragment-->
    <string name="FAVORITE_TEXT">Favorite</string>
    <string name="STAR_CONTENT_DESC">Star</string>
</resources>
