<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--Welcome string-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/WELCOME_STRING"/>

    <!--Activity button-->
    <Button
        android:id="@+id/activity_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ACTIVITY_BUTTON_TEXT"/>

    <!--Fragment button-->
    <Button
        android:id="@+id/fragment_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FRAGMENT_BUTTON_TEXT"/>

    <!--Service button-->
    <Button
        android:id="@+id/service_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SERVICE_BUTTON_TEXT"/>

    <!--Content provider button-->
    <Button
        android:id="@+id/content_provider_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CONTENT_PROVIDER_BUTTON_TEXT"/>
</LinearLayout>

